Revision history for perl distribution LinkEmbedder

1.17 Not Released
 - Add support for https://www.webex.com/
 - Add support for https://meet.google.com/
 - Add "le-video-chat" class to video chat resources
 - Renamed "AppearIn" to "Whereby"

1.16 2021-01-05T08:15:56+0900
 - Fix handling pastebin with child nodes

1.15 2020-11-30T11:40:00+0900
 - Will also detect Jitsi links by looking at "title"

1.15 2020-11-25T10:43:25+0900
 - Add support for Jitsi links

1.14 2020-09-21T08:47:37+0900
 - Select github line ranges when specified
   Contributor: Joel Berger

1.13 2020-09-17T13:08:51+0900
 - Fix parsing imgur links #17
 - Fix parsing metacpan.org links
 - Fix parsing pastebini.com links
 - Fix parsing xkcd.com links
 - Add support for Instagram photos inside iframe #15
 - Add support for rendering GitHub source code #16
 - Add support for extracting "application/ld+json" information
 - Add support for paste.centos.org (replaced fedoraproject paste)
 - Changed to use twitframe.com to embed twitter posts

1.12 2020-03-24T12:12:10+0900
 - Add support for reading X-Provider-Name from headers
 - Will serve plain text as a paste

1.11 2020-01-07T09:24:53+0900
 - Add support for fortunecowsay.com

1.10 2019-12-23T13:23:49+0900
 - Fix Can't locate object method "clone" via package ...

1.09 2019-12-23T11:20:51+0900
 - Fix loading google images by setting "User-Agent" header #13
 - Removed default placeholder_url

1.08 2019-11-12T16:04:56+0900
 - Fix "Can't call method "host" on an undefined"

1.07 2019-10-30T09:12:36+0900
 - Add support for force_secure
 - Replaced most of the insecure "http:" links #11
 - Changed appear.in to whereby.com #11

1.06 2019-10-16T18:55:09+0900
 - Add support for NHL videos #12
 - Fixed a bunch of failing tests #12
 - Make sure error() is always a hash-ref

1.05 2019-04-17T18:33:02+0700
 - No longer EXPERIMENTAL
 - Replaced a bunch of outdated example links

1.04 2019-04-03T16:21:20+0700