@@ -4,6 +4,7 @@ Revision history for perl distribution LinkEmbedder
  - Add support for https://www.webex.com/
  - Add support for https://meet.google.com/
  - Add "le-video-chat" class to video chat resources
+ - Removed embed support for Instagram, since it does not work without a key
  - Renamed "AppearIn" to "Whereby"
 
 1.16 2021-01-05T08:15:56+0900
